feat: added swagger for notes crud operation
